--- a/Página principal/PortafoliosDuedra.html
+++ b/Página principal/PortafoliosDuedra.html
@@ -866,6 +866,9 @@
         method="post">
       </form>
     </div>
+    <div class="col-md-12">
+      <video src="HTML-Portafolios.mp4">video_explicativo_parcial</video>
+    </div>
   </div>
   <footer>
     <p class="pie">Derechos reservados a Delfina Duedra Ortiz</p>
