--- a/Página principal/PortafoliosDuedra.html
+++ b/Página principal/PortafoliosDuedra.html
@@ -268,7 +268,7 @@
       background-color: #fbc572;
       padding: 20px;
       text-align: center;
-      
+
     }
 
 
@@ -283,6 +283,7 @@
     #myCarousel {
       width: 595px;
     }
+
     .item {
       padding: 30px;
     }
@@ -593,7 +594,8 @@
       font-weight: bold;
       font-family: "Raleway" sans-serif;
     }
-    .b1{
+
+    .b1 {
       font-family: "Raleway" sans-serif;
       font-size: 20px;
       font-weight: bold;
@@ -603,26 +605,27 @@
       border: none;
       border-radius: 10px;
       width: 500px;
-    }
-    .b1:hover{
-      background-color: #fc9b0c;
-    }
-    .b2{
-      font-family: "Raleway" sans-serif;
-      font-size: 20px;
-      font-weight: bold;
-      background-color: #fc9b0c;
-      color: beige;
-      padding: 15px;
-      border: none;
-      border-radius: 10px;
-      width: 500px;
-    }
-    .b2:hover{
-      background-color: #fbc572;
     }
 
- 
+    .b1:hover {
+      background-color: #fc9b0c;
+    }
+
+    .b2 {
+      font-family: "Raleway" sans-serif;
+      font-size: 20px;
+      font-weight: bold;
+      background-color: #fc9b0c;
+      color: beige;
+      padding: 15px;
+      border: none;
+      border-radius: 10px;
+      width: 500px;
+    }
+
+    .b2:hover {
+      background-color: #fbc572;
+    }
   </style>
 </head>
 
@@ -651,7 +654,8 @@
             <i class="fas fa-bars"></i>
           </label>
           <ul>
-            <li><a class="active" href="http://127.0.0.1:5500/P%C3%A1gina%20principal/PortafoliosDuedra.html#">INICIO</a></li>
+            <li><a class="active"
+                href="http://127.0.0.1:5500/P%C3%A1gina%20principal/PortafoliosDuedra.html#">INICIO</a></li>
 
 
             <div class="dropdown">
@@ -853,21 +857,27 @@
 
   <div class="row">
     <div class="col-md-6" id="col8">
-      <button class="b1" onclick="location.href='http://127.0.0.1:5500/Proyectos%20Nacionales/ProyectosNac.html'"
-        >PROYECTOS NACIONALES</button>
+      <button class="b1"
+        onclick="location.href='http://127.0.0.1:5500/Proyectos%20Nacionales/ProyectosNac.html'">PROYECTOS
+        NACIONALES</button>
       <form name="PortafoliosDuedra" action="http://127.0.0.1:5500/Proyectos%20Nacionales/ProyectosNac.html"
         method="post">
       </form>
     </div>
     <div class="col-md-6" id="col9">
-      <button class="b2" onclick="location.href='http://127.0.0.1:5500/Proyectos%20Internac/Proyectos%20Internac.html'"
-        >PROYECTOS INTERNACIONALES</button>
+      <button class="b2"
+        onclick="location.href='http://127.0.0.1:5500/Proyectos%20Internac/Proyectos%20Internac.html'">PROYECTOS
+        INTERNACIONALES</button>
       <form name="PortafoliosDuedra" action="http://127.0.0.1:5500/Proyectos%20Internac/Proyectos%20Internac.html"
         method="post">
       </form>
     </div>
-    <div class="col-md-12">
-      <video src="HTML-Portafolios.mp4">video_explicativo_parcial</video>
+    <div class="col-md-12" style="background-color: orange; text-align: center; margin-top: 20px; padding: 30px;">
+      <a href=""
+        style="font-family: 'Raleway'; font-weight: bolder; font-size: 20px; background-color: beige; color: black; padding: 15px;">video_explicativo_parcial</a>
+      <a href="https://github.com/Delfina-do/Portafolios-Duedra.git"
+        style="font-family: 'Raleway'; font-weight: bolder; font-size: 20px; background-color: beige; color: black; padding: 15px;">Repositorio
+        GitHub</a>
     </div>
   </div>
   <footer>
