--- a/Página principal/PortafoliosDuedra.html
+++ b/Página principal/PortafoliosDuedra.html
@@ -873,7 +873,7 @@
       </form>
     </div>
     <div class="col-md-12" style="background-color: orange; text-align: center; margin-top: 20px; padding: 30px;">
-      <a href=""
+      <a href="https://youtu.be/8cdSrpWdmk8"
         style="font-family: 'Raleway'; font-weight: bolder; font-size: 20px; background-color: beige; color: black; padding: 15px;">video_explicativo_parcial</a>
       <a href="https://github.com/Delfina-do/Portafolios-Duedra.git"
         style="font-family: 'Raleway'; font-weight: bolder; font-size: 20px; background-color: beige; color: black; padding: 15px;">Repositorio
